@@ -1,3 +1,9 @@
+2007-01-08  Al Riddoch  <alriddoch@zepler.org>
+
+	* Eris/Connection.cpp, Eris/IGRouter.cpp, Eris/Lobby.cpp:
+	  Use more efficient checks on FROM and TO, and add more checks
+	  where necessary.
+
 2007-01-06  Al Riddoch  <alriddoch@zepler.org>
 
 	* configure.ac: Increment version number and interface version.
